code/style.css
body {
  background-color: burlywood;
  display: flex;
  flex-direction: column;
  overflow: auto;
  font-family: 'DM Sans', sans-serif;
  width: 100%;
  height: 100%;
  margin-right: 5%;
  margin-left: 5%;
}

@media (max-width: 667px)  {
.navigation { 
  height: 65px;
  width: 100%;
  margin-bottom: 5%;
  margin-left: 5%;
  text-align: right;
}}

@media (min-width: 668px) and (max-width: 1023px) {
.navigation {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  margin-left: 10%;
  margin-right: 25%;
  margin-bottom: 2%;
}}

.page-header {
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
  float: left;
}

@media (min-width: 668px) and (max-width: 1023px) {
.page-header {
  order: 1;
  display: flex;
}}

@media (min-width: 1024px) {
.page-header {
  margin-bottom: 2%;
}}

@media (min-width: 668px) and (max-width: 1023px) {
.logo {
  order: 1;
}}

@media (min-width: 668px) and (max-width: 1023px) {
.page-header h3 {
  display: none;
}}

@media (min-width: 668px) and (max-width: 1023px) {
.left {
  order: 0;
  display: flex;
  margin-right: 15%;
}}

@media (min-width: 668px) and (max-width: 1023px) {
.right {
  order: 2;
  display: flex;
}}

.page-header img {
  width: 60px;
  height: auto;
}

.links-left {
  display: none;
}

.links-right {
  display: none;
}

@media (min-width: 668px) {
.links-left {
  display: flex;
  align-items: center;
  padding: 10%;
  font-size: 25px;
}}

@media (min-width: 668px) {
.links-right {
  display: flex;
  align-items: center;
  padding: 10%;
  font-size: 25px;
}}

@media (min-width: 1024px) {
.left {
  display: flex;
  float: right;
  margin-right: 15%;    
}}

@media (min-width: 1024px) {
.right {
  display: flex;
  float: right;
  margin-right: 4%;    
}}

@media (min-width: 1024px) {
.links-right {
  display: flex;
  flex-flow: row;
  margin-top: 5%;
  margin-left: 2%;
  font-size: 20px;
}}

@media (min-width: 1024px) {
.links-left {
  display: flex;
  justify-content: row;
  margin-top: 5%;
  margin-left: 2%;
  font-size: 20px;
}}

a:-webkit-any-link {
  color: brown;
  cursor: pointer;
  text-decoration: none;
}

a:hover {
 color: rgb(246, 238, 229); 
 background-color: rgb(131, 106, 75);
}

.menu {
  padding: 2%;
  margin-right: 10%;
}

@media (min-width: 668px) {
.menu {
  display: none;
}}

.content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-left: 5%;
}

@media (min-width: 668px) {
.content {
  margin-left: 5%;
}}

@media (min-width: 1024px) {
.content {
  margin: 0%;
}}

.presentation {
  background-color: rgb(131, 106, 75);
  position: relative;
  display: flex;
  align-items: flex-start;  
  flex-direction: column;
  padding: 2%;
  width: 100%;
  margin-right: 10%;
}

.presentation img {
  width: 100%;
  height: auto;
  border: solid wheat;
}

@media (min-width: 668px) {
.presentation img {
  width: 100%;
}}

@media (min-width: 1024px) {
.presentation img {
  width: 100%;
  }}

.presentation-text {
  width: 90%;
  height: auto;
  padding: 3%;
  position: relative;
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
}

h1 {
  color: aquamarine;
  font-size: 40px;
  margin-block-start: 0.5em;
  margin-block-end: 0em;
}

.presentation p {
  color: azure;
  font-size: 15px;
}

.content-area {
  width: 100%;
  height: auto;
  overflow: auto;
  margin-bottom: 80px;
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  overflow: auto;
  margin-right: 10%;
}

@media (min-width: 668px) {
.content-area {
  margin-left: 5%;
}}

main {
  display: block; 
}

.box {
  width: auto;
  height: 500px;
  margin-top: 50px;
  margin-right: 2%;
  display: block;
  background-color: bisque;
  padding: 2%;
}

@media (min-width: 668px) {
.box {
  display: inline-block;
  vertical-align: top;
  width: 40%;
}}

@media (min-width: 1024px) {
.box {
  display: inline-block;
  vertical-align: top;
  height: 400px;
  width: 18%;
}}

.box a {
  color: rgb(84, 181, 179);
  width: 90%;
  margin-bottom: 10px;
  margin-top: 12px;
  margin-left: 5%;
  display: block;
  font-size: 1.5em;
  font-weight: bold;
}

.box p {
  width: 90%;
  margin-left: 5%;
}

.box img {
  display: flex;
  justify-content: flex-start;
  width: 90%;
  height: auto;
  vertical-align: middle;
  margin-bottom: 30px;
  margin-top: 20px;
  margin-left: 5%;
  border: solid rgb(131, 106, 75);
}

